<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.brokoli.mybeaconadmin.view.user.UserActionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/sector"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setorAutoCompleteTextView"
            android:hint="@string/beaconSetor"
            android:completionThreshold="@string/completionThreshold"/>

        </LinearLayout>

    <View style="@style/StrongDivider"/>

    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/passedBySector"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passedBySector"
        android:layout_gravity="end"
        android:onClick="passedBySector"/>

    <View style="@style/StrongDivider"/>

    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/walkThroughGate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gateAutoCompleteTextView"
        android:hint="@string/gate"
        android:completionThreshold="@string/completionThreshold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passedByGate"
        android:layout_gravity="end"
        android:onClick="passedByGate"/>

    <View style="@style/StrongDivider"/>

    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/walkThroughObject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/objectAutoCompleteTextView"
        android:hint="@string/object"
        android:completionThreshold="@string/completionThreshold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passedByObject"
        android:layout_gravity="end"
        android:onClick="passedByObject"/>

</LinearLayout>
