<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.brokoli.mybeaconadmin.view.logs.StatsActivity">

    <TextView
        android:text="@string/whereIsUser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whereIsUserAutoCompleteTextView"
        android:hint="@string/username"
        android:completionThreshold="@string/completionThreshold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:layout_gravity="end"
        android:onClick="findUser"/>

    <TextView
        android:text="@string/lastSectorBeacon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/whereIsUserTextView"
        tools:text="@string/whereIsUser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/lastGateAndDirection"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/whereIsUserGateTextView"
        tools:text="@string/whereIsUser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/whereIsUserGateDirectionTextView"
        tools:text="@string/whereIsUser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View style="@style/StrongDivider"/>

    <TextView
        android:text="@string/whereIsObject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whereIsObjectAutoCompleteTextView"
        android:hint="@string/object"
        android:completionThreshold="@string/completionThreshold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:layout_gravity="end"
        android:onClick="findObject"/>

    <TextView
        android:id="@+id/whereIsObjectTextView"
        tools:text="@string/whereIsObject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
